--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test-W": "jest --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
